[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "sam_graph_database"
dynamic = ["version"]
authors = [
  { name="Emil Zegers", email="emil.zegers@solace.com" },
]
description = "A plugin that provides graph database query capabilities with natural language processing. Supports Neo4j and TBD databases."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "neo4j>=5.28.1"
]

[tool.hatch.build.targets.wheel.force-include]
"src" = "sam_graph_database/src"
"interfaces" = "sam_graph_database/interfaces"
"configs" = "sam_graph_database/configs"
"solace-agent-mesh-plugin.yaml" = "sam_graph_database/solace-agent-mesh-plugin.yaml"

[tool.hatch.build.targets.wheel]
packages = ["sam_graph_database"]

[tool.hatch.version]
path = "src/__init__.py"

